# -UCAR-TOPDOER_test_task

./: .dockerignore  .env  .env.example  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_11_10_0830-dc9abbb0480b_init.py  2025_11_10_1349-72b4d4508cfb_seed_data.py  2025_11_10_1355-5663a3c83aba_mock_incidents.py
app/: main.py  repositories.py
app/api/: router.py
app/api/v1/: incident.py
app/core/: config.py  db.py
app/models/: __init__.py  incident.py
app/schemas/: incident.py
app/scripts/: mock_data.json  mock_data.py
seed_data/: seed_data.json
