[project]
name = "ucar-topdoer-test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.1",
    "fastapi>=0.121.1",
    "sqlalchemy>=2.0.44",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.1.0",
    "uvicorn[standard]>=0.23.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.11",
    "ruff>=0.14.4",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
